--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,8 +1,8 @@
 <% provide(:title, 'Help') %>
 <h1>Help</h1>
 <p>
-  Get help on the Ruby on Rails Tutorial at the
-  <a href="http://railstutorial.org/help">Rails Tutorial help page</a>.
+  Here you will get help about my god damn application
+  <a href="http://railstutorial.org/help">God damn help appilication</a>.
   To get help on this sample app, see the
   <a href="http://railstutorial.org/book">Rails Tutorial book</a>.
 </p>
